# ml-flow-ops

./: .gitignore  1_main.py  4_evaluate.py  5_iris_inference.py  5_iris_train.py  6_hyp_tuning.py  README.md  commands.txt  main_lang.py  main_mistral.py  mlflow.db  pyproject.toml
mlartifacts/3/8c31f937dedc454bbb77d8648103ceb4/artifacts/: estimator.html
mlartifacts/3/models/m-d6b23471557345f8a1114dcb2a874144/artifacts/: MLmodel  conda.yaml  requirements.txt
