[project]
name = "ml-flow-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[openai]>=1.3.1",
    "mistralai>=2.4.7",
    "mlflow>=3.12.0",
    "openai>=2.38.0",
    "optuna>=4.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
